# huggingface_toolbox

./: README.md  pyproject.toml  requirements.txt
cyy_huggingface_toolbox/: __init__.py  loss.py
cyy_huggingface_toolbox/data_pipeline/: __init__.py  transform.py
cyy_huggingface_toolbox/dataset/: __init__.py  repository.py
cyy_huggingface_toolbox/inference/: __init__.py  vllm.py
cyy_huggingface_toolbox/model/: __init__.py  evaluator.py  finetune_evaluator.py  huggingface_evaluator.py  huggingface_model.py  model.py  util.py  vllm.py
cyy_huggingface_toolbox/tokenizer/: __init__.py
test/: test_dataset.py  test_tokenizer.py
