[build-system]
requires = ["setuptools >= 63.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cyy_huggingface_toolbox"
version = "0.1"
requires-python = ">=3.12"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
  {name = "cyy", email = "cyyever@outloo.com"},
]
license = {text = "BSD License"}
classifiers = [
  "Programming Language :: Python"
]

dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[project.urls]
Repository = "https://github.com/cyyever/huggingface_toolbox"

[tool.pyright]
include = ["cyy_huggingface_toolbox"]

[tool.ruff]
target-version = "py312"
src = ["cyy_huggingface_toolbox"]


[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

ignore = ["F401","E501","F403"]
