[build-system]
requires = ["setuptools >= 63.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cyy_huggingface_toolbox"
version = "0.1"
requires-python = ">=3.12"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
  {name = "cyy", email = "cyyever@outloo.com"},
]
license = {text = "BSD License"}
classifiers = [
  "Programming Language :: Python"
]

dependencies = [
  "huggingface-hub",
  "transformers",
  "datasets",
  "bitsandbytes",
  "peft",
  "trl",
  "cyy_torch_toolbox@git+https://github.com/cyyever/torch_toolbox.git@main",
]

[project.urls]
Repository = "https://github.com/cyyever/huggingface_toolbox"

[tool.ruff]
target-version = "py312"
src = ["cyy_huggingface_toolbox"]


[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # pylint
  "PL",
  # numpy
  "NPY",
  # ruff
  "RUF",
]

ignore = ["F403"]
